[workspace]
members = [
    "steg-core",
    "steg-encode",
    "steg-decode",
    "gallery-server",
]
resolver = "2"

[workspace.dependencies]
steg-core = { path = "steg-core" }
image = "0.25"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
