[package]
name = "gallery-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gallery-server"
path = "src/main.rs"

[dependencies]
steg-core = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
tower = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
